--- a/app/src/main/res/layout/cardio_predict.xml
+++ b/app/src/main/res/layout/cardio_predict.xml
@@ -8,6 +8,72 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/alcoPredict"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:text="TextView"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/smokeBar" />
+
+    <TextView
+        android:id="@+id/alcoPct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="13dp"
+        app:layout_constraintStart_toEndOf="@+id/alcoBar"
+        app:layout_constraintTop_toBottomOf="@+id/alcoPredict" />
+
+    <ProgressBar
+        android:id="@+id/alcoBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="250dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="10dp"
+        android:max="100"
+        android:progressTint="#F03D30"
+        android:scaleY="3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/alcoPredict" />
+
+    <TextView
+        android:id="@+id/smokePredict"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:text="TextView"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cholBar" />
+
+    <TextView
+        android:id="@+id/smokePct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="13dp"
+        app:layout_constraintStart_toEndOf="@+id/smokeBar"
+        app:layout_constraintTop_toBottomOf="@+id/smokePredict" />
+
+    <ProgressBar
+        android:id="@+id/smokeBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="250dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="10dp"
+        android:max="100"
+        android:progressTint="#F03D30"
+        android:scaleY="3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/smokePredict" />
+
+    <TextView
         android:id="@+id/infoTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -70,11 +136,11 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/tenYears"
+        android:id="@+id/agePredict"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="50dp"
         android:text="@string/TenYearsLater"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +157,7 @@
         android:progressTint="#F03D30"
         android:scaleY="3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tenYears" />
+        app:layout_constraintTop_toBottomOf="@+id/agePredict" />
 
     <TextView
         android:id="@+id/agePct"
@@ -101,7 +167,40 @@
         android:layout_marginTop="13dp"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/ageBar"
-        app:layout_constraintTop_toBottomOf="@+id/tenYears" />
+        app:layout_constraintTop_toBottomOf="@+id/agePredict" />
+
+    <TextView
+        android:id="@+id/cholPredict"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:text="TextView"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ageBar" />
+
+    <ProgressBar
+        android:id="@+id/cholBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="250dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="10dp"
+        android:max="100"
+        android:progressTint="#F03D30"
+        android:scaleY="3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cholPredict" />
+
+    <TextView
+        android:id="@+id/cholPct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="13dp"
+        app:layout_constraintStart_toEndOf="@+id/cholBar"
+        app:layout_constraintTop_toBottomOf="@+id/cholPredict" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
