--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -12,7 +12,7 @@
         android:background="@color/white"
         android:gravity="center"
         android:text="HOW TO ?"
-        android:textColor="@color/black"
+        android:textColor="#298A08"
         android:textSize="18sp" />
 
     <LinearLayout
