--- a/app/src/main/res/layout/activity_heart_graph.xml
+++ b/app/src/main/res/layout/activity_heart_graph.xml
@@ -9,72 +9,91 @@
     tools:context=".HeartGraphActivity">
 
     <RelativeLayout
-        android:layout_marginTop="10dp"
-        android:background="@drawable/current_tab"
-        android:id="@+id/current_layout"
+        android:background="@drawable/current_tab_image2"
+        android:id="@+id/current_layout1"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="350dp"
-            android:layout_height="match_parent">
+        android:layout_height="100dp">
+        <TextView
+            android:layout_marginTop="10dp"
+            android:id="@+id/current_text"
+            android:layout_width="120dp"
+            android:layout_height="30dp"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:text="최근 심박수">
+        </TextView>
+        <RelativeLayout
+            android:layout_below="@+id/current_text"
+            android:id="@+id/current_layout"
+            android:layout_width="match_parent"
+            android:layout_height="60dp">
             <LinearLayout
-                android:layout_marginLeft="20dp"
-                android:orientation="vertical"
-                android:layout_width="100dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent">
+                <LinearLayout
+                    android:layout_marginLeft="20dp"
+                    android:orientation="vertical"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:textColor="@color/black"
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/dateText"
+                        android:text="2019 - 10- 08"
+                        android:textSize="13dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                    </TextView>
+
+                    <TextView
+                        android:textColor="@color/black"
+                        android:id="@+id/timeText"
+                        android:text="18 : 30 "
+                        android:textSize="12dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                    </TextView>
+
+                </LinearLayout>
                 <TextView
-                    android:layout_marginTop="10dp"
-                    android:id="@+id/dateText"
-                    android:text="2019 - 10- 08"
-                    android:textSize="13dp"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="15dp"
+                    android:id="@+id/statusText"
+                    android:layout_marginLeft="50dp"
+                    android:text="EXCITE"
+                    android:textSize="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                </TextView>
+                <TextView
+                    android:textColor="@color/black"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="40dp"
+                    android:id="@+id/bpmText"
+                    android:text="75 BPM"
+                    android:textSize="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                 </TextView>
 
-                <TextView
-                    android:id="@+id/timeText"
-                    android:text="18 : 30 "
-                    android:textSize="12dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                </TextView>
 
             </LinearLayout>
-            <TextView
-                android:layout_marginTop="15dp"
-                android:id="@+id/statusText"
-                android:layout_marginLeft="30dp"
-                android:text="EXCITE"
-                android:textSize="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </TextView>
-            <TextView
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="30dp"
-                android:id="@+id/bpmText"
-                android:text="75 BPM"
-                android:textSize="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </TextView>
 
 
-        </LinearLayout>
-
-
+        </RelativeLayout>
     </RelativeLayout>
 
+
     <RelativeLayout
-        android:layout_below="@+id/current_layout"
+        android:layout_below="@+id/current_layout1"
         android:id="@+id/spinner_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="60dp">
         <RelativeLayout
             android:id="@+id/time_layout"
-            android:layout_width="140dp"
+            android:layout_width="180dp"
             android:layout_height="50dp"
             android:layout_marginRight="3dp"
             android:layout_weight=".28"
@@ -145,6 +164,13 @@
         android:id="@+id/graph_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:lid="@+id/spinner_layout1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </RelativeLayout>
 
         <TableLayout
             android:id="@+id/valuetable"
