--- a/app/src/main/res/layout/activity_heart_graph.xml
+++ b/app/src/main/res/layout/activity_heart_graph.xml
@@ -166,7 +166,7 @@
         android:layout_height="wrap_content">
 
         <RelativeLayout
-            android:lid="@+id/spinner_layout1"
+            android:id="@+id/spinner_layout1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
