--- a/app/src/main/res/drawable/button2.xml
+++ b/app/src/main/res/drawable/button2.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
+    <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent"/>
+            <solid android:color="@android:color/background_light"/>
             <stroke
                 android:width="1dp"
                 android:color="@android:color/holo_green_light" />
             <corners
-                android:radius="3dp" />
+                android:radius="25dp" />
             <padding
                 android:left="1dp"
                 android:top="1dp"
@@ -16,21 +16,22 @@
         </shape>
     </item>
 
-    <item android:state_pressed="false">
-        <shape android:shape="rectangle">
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle" >
+            <solid android:color="#C3D8AB"/>
             <stroke
                 android:width="1dp"
                 android:color="@android:color/holo_green_light" />
             <corners
-                android:radius="3dp" />
+                android:radius="25dp" />
             <padding
                 android:left="1dp"
                 android:top="1dp"
                 android:right="1dp"
                 android:bottom="1dp" />
-            <gradient android:angle="45" android:centerColor="#E7F3E7"
-                android:endColor="#E0F7C8" android:startColor="#CBF897"
-                android:type="sweep" />
+            <!--<gradient android:angle="45" android:centerColor="#E7F3E7"
+                android:endColor="#E7F3E7" android:startColor="#D7FCAE"
+                android:type="sweep" />-->
         </shape>
     </item>
 </selector>
