--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/predictBtn" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/msgText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
