--- a/app/src/main/res/layout/activity_aed.xml
+++ b/app/src/main/res/layout/activity_aed.xml
@@ -7,12 +7,6 @@
     android:orientation="vertical"
     android:padding="10dp"
     tools:context=".AEDActivity">
-    <Button
-        android:id="@+id/button"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Search AED Location" />
 
     <!--    <ScrollView-->
     <!--        android:layout_width="match_parent"-->
@@ -26,6 +20,21 @@
     <!--            android:textStyle="bold" />-->
 
     <!--    </ScrollView>-->
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_aed"
+        android:drawableTop="@drawable/ic_aed_image"
+        android:paddingBottom="5dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="8dp"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:text="@string/aed_button"
+        android:textColor="@color/white" />
 
     <LinearLayout
         android:id="@+id/location_layout"
