--- a/app/src/main/res/layout/activity_aed.xml
+++ b/app/src/main/res/layout/activity_aed.xml
@@ -8,6 +8,13 @@
     android:padding="10dp"
     tools:context=".AEDActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </androidx.appcompat.widget.Toolbar>
+
+
     <!--    <ScrollView-->
     <!--        android:layout_width="match_parent"-->
     <!--        android:layout_height="100dp">-->
