--- a/app/src/main/res/layout/activity_heart_graph.xml
+++ b/app/src/main/res/layout/activity_heart_graph.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="15dp"
     tools:context=".HeartGraphActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -19,8 +20,7 @@
         android:layout_height="100dp"
         android:layout_below="@id/toolbar"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="0dp"
-        android:background="@drawable/current_tab_image2">
+        android:layout_marginStart="0dp">
 
 
         <TextView
@@ -87,8 +87,6 @@
                     android:text="75 BPM"
                     android:textColor="@color/black"
                     android:textSize="20dp"></TextView>
-
-
             </LinearLayout>
 
 
@@ -186,14 +184,17 @@
         <TableLayout
             android:id="@+id/valuetable"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="60dp">
             <TableRow
+                android:background="@drawable/aed_tab"
                 android:id="@+id/value">
                 <TextView
+                    android:layout_height="50dp"
                     android:id="@+id/max"
                     android:layout_marginTop="15dp"
                     android:layout_marginLeft="20dp"
                     android:layout_width="50dp"
+
                     android:text="MAX |"
                     android:textSize="14dp"
                     android:textStyle="bold" />
@@ -248,8 +249,8 @@
 
         <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/linechart"
-            android:layout_width="350dp"
-            android:layout_height="380dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_below="@+id/valuetable"
             android:layout_centerInParent="true"
             android:layout_marginTop="0dp"
