--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content" />
 
         <LinearLayout
-            android:layout_margin="5dp"
+            android:layout_margin="10dp"
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -54,18 +54,15 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_width="80dp"
+                    android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:src="@drawable/bpm_image1">
                 </ImageView>
                 <TextView
                     android:textAlignment="center"
-                    android:layout_marginLeft="20dp"
                     android:textColor="@color/black"
                     android:layout_marginTop="13dp"
-                    android:textSize="8sp"
+                    android:textSize="10sp"
                     android:text="@string/bpmtext2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -85,7 +82,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginLeft="20dp"
                     android:layout_width="80dp"
                     android:layout_height="90dp"
@@ -95,12 +92,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="17dp"
+                    android:layout_marginTop="16dp"
                     android:text="@string/bpmtext3"
                     android:textAlignment="center"
                     android:textColor="@color/black"
-                    android:textSize="8sp"></TextView>
+                    android:textSize="10sp"></TextView>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
