--- a/app/src/main/res/drawable-v24/button3.xml
+++ b/app/src/main/res/drawable-v24/button3.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/maincolor1"/>
+            <solid android:color="@color/maincolor2"/>
             <stroke
                 android:width="3dp"
                 android:color="@color/white" />
@@ -18,10 +18,10 @@
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/maincolor1"/>
+            <solid android:color="@color/maincolor2"/>
             <stroke
                 android:width="3dp"
-                android:color="@color/maincolor1" />
+                android:color="@color/edgecolor" />
             <corners
                 android:radius="25dp" />
             <padding
