--- a/app/src/main/res/drawable-v24/aed_tab.xml
+++ b/app/src/main/res/drawable-v24/aed_tab.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+    android:shape="rectangle" >
     <stroke
-        android:width="3dp"
-        android:color="@android:color/darker_gray" />
+        android:width="5dp"
+        android:color="@color/maincolor1" />
+
+    <solid android:color="@color/white"/>
+
+
     <corners
-        android:radius="10dp" />
+        android:radius="2dp" />
     <padding
         android:left="1dp"
         android:top="1dp"
