--- a/app/src/main/res/layout/listview_aed.xml
+++ b/app/src/main/res/layout/listview_aed.xml
@@ -3,8 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
+        android:background="#FAFAFA"
+        android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="90dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:gravity="center_vertical"
@@ -13,7 +15,7 @@
         <TextView
             android:id="@+id/buildAddress"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:text="buildAddress"
@@ -23,7 +25,7 @@
 
         <TextView
             android:id="@+id/buildPlace"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
