--- a/app/src/main/res/layout/activity_heart_graph.xml
+++ b/app/src/main/res/layout/activity_heart_graph.xml
@@ -5,15 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="15dp"
     tools:context=".HeartGraphActivity">
 
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme" />
 
     <RelativeLayout
         android:id="@+id/current_layout1"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-
+        android:layout_below="@+id/toolbar7"
         android:layout_alignParentStart="true"
         android:layout_marginStart="0dp">
 
@@ -25,7 +32,9 @@
             android:layout_marginTop="10dp"
             android:text="최근 심박수"
             android:textAlignment="center"
-            android:textColor="@color/black"></TextView>
+            android:textColor="@color/black">
+
+        </TextView>
 
         <RelativeLayout
             android:id="@+id/current_layout"
